--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
         <!-- We link our html to the Bootstrap CDN -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
 
     <body>
 
         <header id="header">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light .navbar-expand{-sm|-md|-lg|-xl}">
                 <div class="container">
                     <span class="navbar-brand mb-0 h1">Andrew Joung</span>
                     <form class="form-inline">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
                                 <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="#">Portfolio</a>
+                                <a class="nav-link" href="./portfolio.html">Portfolio</a>
                                 </li>
                                 <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
+                                <a class="nav-link" href="./contact.html">Contact</a>
                                 </li>
                                 <li class="nav-item">
                                 </li>
@@ -39,7 +43,26 @@
         </header>
 
         <section id="mainContent">
+            <div class="container">
+                <div class="jumbotron">
+                    <h3 class="jumboHeader">About Me</h3>
+                    <hr class="my-4">
+                    <img src="assets/images/portrait.jpeg" alt="self portrait" id="selfPortrait" />
+                    <p> My name is Andrew Joung. I am 23 years old and I live in Bellevue, WA.
+                        I love listening to music and in my free time I enjoy spending time outdoors.
+                        In the spring/summer I enjoy hiking, camping, golfing, playing pickle ball, and spending time with my friends.
+                        I am always down to grab a beer outside at a nice brewery.
+                        In the winter I try to spend as much time as I can up in the mountains snowboarding.</p>
 
+                    <p> I attended the University of Washington for a while where I studied Informatics which is where my journey as a developer started.
+                        I have background in front-end development, Java, basic computer science logic including algorithms and data structures, as well as 
+                        a little bit of Android development. </p>
+                    
+                    <p> During this last year, I lived in Korea for 6 months teaching English which really challenged me to step out of my comfort zone.
+                        As I became ready to return back to seattle, I spent 2 weeks traveling alone in Thailand.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <footer id="footer">
