--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="./index.html">About <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                 <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -47,7 +47,8 @@
                 <div class="jumbotron">
                     <h3 class="jumboHeader">About Me</h3>
                     <hr class="my-4">
-                    <img src="assets/images/portrait.jpeg" alt="self portrait" id="selfPortrait" />
+                    <img  class="card-img-top" src="assets/images/portrait.jpeg" alt="self portrait" id="selfPortrait" />
+
                     <p> My name is Andrew Joung. I am 23 years old and I live in Bellevue, WA.
                         I love listening to music and in my free time I enjoy spending time outdoors.
                         In the spring/summer I enjoy hiking, camping, golfing, playing pickle ball, and spending time with my friends.
