--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,9 @@
         </section>
 
         <footer id="footer">
-
+            <div class="container-fluid">
+                <p>Copyright &copy;</p>
+            </div>
         </footer>
 
         <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
