--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
         </section>
 
         <footer id="footer">
-
+            <div class="container-fluid">
+                <p>Copyright &copy;</p>
+            </div>
         </footer>
 
         <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
