make little adjustments

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     </p>
                 </div>
             </div>
+            <div class="push"></div>
         </section>
 
         <footer id="footer">
