--- a/portfolio.html
+++ b/portfolio.html
@@ -91,6 +91,7 @@
                     </div>
                 </div>
             </div>
+            <div class="push"></div>
         </section>
 
         <footer id="footer">
