update portfolio.html to use correct row/column format

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,9 @@
                 <div class="jumbotron">
                     <h3 class="jumboHeader">Portfolio</h3>
                     <hr class="my-4">
+                    <!-- Row 1 -->
                     <div class="row">
+                        <!-- row 1 column 1 -->
                         <div class="col-md-4">
                             <div class="card" style="width: 100%;">
                                 <img class="card-img-top" src="assets/images/image1.jpg" alt="Card image cap">
@@ -56,6 +58,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- row 1 column 2 -->
                         <div class="col-md-4">
                             <div class="card" style="width: 100%;">
                                 <img class="card-img-top" src="assets/images/image2.jpg" alt="Card image cap">
@@ -64,6 +67,7 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- row 1 column 3 -->
                         <div class="col-md-4">
                             <div class="card" style="width: 100%;">
                                 <img class="card-img-top" src="assets/images/image3.jpg" alt="Card image cap">
@@ -72,6 +76,11 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- Row 2 -->
+                    <div class="row">
+                        <!-- row 2 column 1 -->
                         <div class="col-md-4">
                             <div class="card" style="width: 100%;">
                                 <img class="card-img-top" src="assets/images/image4.jpg" alt="Card image cap">
@@ -80,6 +89,8 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- row 2 column 2 -->
                         <div class="col-md-4">
                             <div class="card" style="width: 100%;">
                                 <img class="card-img-top" src="assets/images/image5.jpg" alt="Card image cap">
@@ -89,6 +100,7 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
